# mcp-binance-futures

./: .pre-commit-config.yaml  ISSUE_TEMPLATE.md  README.md  client.py  pyproject.toml  server.json  server.py
.github/workflows/: ci.yml  publish.yml
src/mcp_binance_futures/: __init__.py  client.py  server.py
tests/: test_client.py  test_server.py
