[project]
name = "mcp-binance-futures"
version = "0.1.0"
description = "MCP server for Binance USDT-M Futures trading"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
mcp-binance-futures = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py", "client.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
